--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tsx": "^4.19.0",
     "typescript": "^5.6.0",
     "eslint": "^9.0.0",
-    "eslint-config-next": "^15.0.0"
+    "eslint-config-next": "^15.0.0",
+    "vitest": "^1.3.0"
   }
 }
